# SAWNERGY

./: .gitignore  AnalysesProcessor.py  AtToResConverter.py  AtomicToMolecularElectrostatics.py  CITATION.cff  CREDITS.md  ElectrostaticAnalysesProcessor.py  ElectrostaticInteractionsToProbabilities.py  FramesAnalyzer.py  FramesElectrostaticsAnalyser.py  InteractionsToProbs.py  InteractionsToProbsConverter.py  Protein.py  QtheJob.sh  README.md  configure_network.sh  create_configuration_file.py  create_configuration_files.py  docs.md  example_run.sh  generate_config_dir.sh  generate_network.sh  main.py  model.py  model_reference.py  network_construction.py  pkg_meta.json  pyproject.toml  requirements.txt  util.py
CICD/: build_whl.py  deploy.sh  how_to_run.txt  test_runner.py
JOSS/: authorship_and_grants.md  bibliography_reference.bib  feedback.md  kellys_suggestions.md  note_for_reviewers.md  old_paper.md  paper.bib  paper.md  paper_reference.md
allosteric_pathway_analyzer/: __init__.py  _util.py  analyses_processor.py  config.py  default_config.json  frames_analyzer.py  hbond_analysis.py  network_analyzer.py  network_visualizer.py  network_visualizer2.py  pkg_globals.py  protein.py  to_matrices_converter.py
configs/: logging.json  root.json
core/: AnalysesProcessor.py  AtToResConverter.py  FramesAnalyzer.py  InteractionsToProbsConverter.py  Protein.py  ToMatricesConverter.py  __int__.py  newProtein.py  newUtil.py  pdbToDict.py  util.py
deployment/: main.py
example_MD_for_quick_start/: brief_description.md  p53_DBD.prmtop
example_analysis/: NOTE.md  (+2 more)
(+52 files in other folders)
